# known-languages

./: .gitattributes  CHANGES.md  CITATION.cff  README.md  Rakefile
.config/codegen/: README.md.liquid
.config/codegen/dart/: README.md.liquid  language.liquid
.config/codegen/python/: README.md.liquid  language.liquid
.config/codegen/ruby/: README.md.liquid  language.liquid
.config/codegen/rust/: README.md.liquid  language.liquid
dart/: README.md  pubspec.yaml
dart/example/: known_languages_example.dart
dart/lib/: known_languages.dart
dart/lib/src/: language.dart
dart/test/: known_languages_test.dart
data/: languages.csv
python/: README.md  pyproject.toml
python/src/known_languages/: __init__.py
ruby/: CHANGES.md  README.md  known-languages.gemspec
ruby/lib/: known-languages.rb
ruby/lib/known/: languages.rb
rust/: Cargo.toml  README.md
rust/src/: language.rs  lib.rs
